--- a/app/src/main/res/layout/dialog_add_review.xml
+++ b/app/src/main/res/layout/dialog_add_review.xml
@@ -7,7 +7,7 @@
     android:background="@color/white">
 
     <TextView
-        android:id="@+id/instruction_text"
+        android:id="@+id/instructionText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/horizontal_marign_show_details"
@@ -17,25 +17,25 @@
         android:textStyle="bold"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/close_button"
+        app:layout_constraintEnd_toStartOf="@id/closeButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
 
     <ImageView
-        android:id="@+id/close_button"
+        android:id="@+id/closeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_24dp"
         android:layout_marginEnd="@dimen/margin_24dp"
         android:src="@drawable/close_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/instruction_text"
+        app:layout_constraintStart_toEndOf="@id/instructionText"
         app:layout_constraintTop_toTopOf="parent"
         />
 
     <RatingBar
-        android:id="@+id/rating_bar"
+        android:id="@+id/ratingBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/horizontal_marign_show_details"
@@ -45,11 +45,11 @@
         android:rating="1"
         android:theme="@style/addReviewRatingBar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/instruction_text"
+        app:layout_constraintTop_toBottomOf="@id/instructionText"
         />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/input_layout"
+        android:id="@+id/inputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -62,7 +62,7 @@
         app:hintTextColor="@color/purple_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/rating_bar"
+        app:layout_constraintTop_toBottomOf="@id/ratingBar"
         >
 
         <com.google.android.material.textfield.TextInputEditText
@@ -91,7 +91,7 @@
         android:backgroundTint="@color/purple_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/input_layout"
+        app:layout_constraintTop_toBottomOf="@id/inputLayout"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
