--- a/app/src/main/res/drawable/register_button_in_login.xml
+++ b/app/src/main/res/drawable/register_button_in_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="300dp"/>
-    <solid android:color="@color/review_button_color"/>
+    <corners android:radius="48dp"/>
+    <solid android:color="#000000FF" />
 </shape>
