--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -163,8 +163,8 @@
             android:id="@+id/registerButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="22dp"
-            android:layout_marginBottom="32dp"
+            android:layout_marginHorizontal="@dimen/margin_24dp"
+            android:layout_marginBottom="@dimen/size32dp"
             android:layout_marginTop="155dp"
             android:text="@string/register"
             android:background="@drawable/rounded_button"
