--- a/app/src/main/res/layout/fragment_show_details.xml
+++ b/app/src/main/res/layout/fragment_show_details.xml
@@ -72,8 +72,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/show_image"
-                    tools:src="@drawable/ic_office"
-                    android:scaleType="fitCenter"/>
+                    android:scaleType="fitCenter"
+                    tools:src="@drawable/ic_office"/>
+
                 <ProgressBar
                     android:id="@+id/loadingSpinner"
                     style="?android:attr/progressBarStyleLarge"
@@ -122,6 +123,7 @@
                     android:textColor="@color/black"
                     tools:text="@string/d_reviews_f_average"
                     />
+
                 <RatingBar
                     android:id="@+id/ratingBar"
                     style="@style/CustomRatingBarStyle"
@@ -143,6 +145,7 @@
                     tools:listitem="@layout/review_card"
                     />
             </LinearLayout>
+
             <TextView
                 android:id="@+id/noReviewsMessage"
                 android:layout_width="match_parent"
