--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -62,7 +62,7 @@
             android:id="@+id/registerText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="125dp"
+            android:layout_marginTop="@dimen/size88dp"
             android:layout_marginStart="@dimen/margin_24dp"
             android:text="@string/register"
             android:textColor="@color/white"
@@ -161,16 +161,14 @@
 
         <Button
             android:id="@+id/registerButton"
-            style="@style/AuthButtonsTextStyle"
+            style="@style/ButtonsStyle"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_24dp"
             android:layout_marginBottom="@dimen/size32dp"
-            android:layout_marginTop="155dp"
+            android:layout_marginTop="@dimen/size88dp"
             android:text="@string/register"
-            android:background="@drawable/rounded_button"
+            android:textColor="@color/white"
             android:enabled="false"
-            app:backgroundTint="@color/button_selector"
+            android:layout_marginHorizontal="@dimen/margin_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
