--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -158,8 +158,9 @@
 
         <Button
             android:id="@+id/loginButton"
-            style="@style/ButtonsStyle"
+            style="@style/AuthButtonsStyle"
             android:layout_width="0dp"
+            android:layout_marginHorizontal="@dimen/margin_24dp"
             android:layout_marginBottom="32dp"
             android:layout_marginTop="@dimen/size88dp"
             android:text="@string/login"
@@ -171,13 +172,15 @@
 
         <Button
             android:id="@+id/registerButton"
-            style="@style/ButtonsStyle"
-            android:textColor="@color/white"
             android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
             android:layout_marginTop="@dimen/margin_24dp"
-            android:text="@string/register"
             android:layout_marginHorizontal="@dimen/margin_24dp"
+            android:textColor="@color/white"
+            android:text="@string/register"
+            android:textAllCaps="false"
+            android:textStyle="bold"
             android:background="@drawable/register_button_in_login"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
