--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,14 +21,24 @@
         <item name="buttonTint">@color/button_tint</item>
     </style>
 
-    <style name="ButtonsStyle">
+    <style name="MiscButtonsStyle">
         <item name="android:textAllCaps">false</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/auth_buttons_text_color</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/text16sp</item>
         <item name="android:background">@drawable/rounded_button</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="backgroundTint">@color/purple_color</item>
+    </style>
+
+    <style name="AuthButtonsStyle">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/auth_buttons_text_color</item>
+        <item name="android:textSize">@dimen/text16sp</item>
         <item name="backgroundTint">@color/button_selector</item>
+        <item name="android:background">@drawable/rounded_button</item>
     </style>
 
     <style name="chipStyle">
